pn-site/css/main.css
/* ... */
/* ------------------- */
/* Main Page Structure */
/* ------------------- */
body {
  /* Ensure the footer is always at the bottom */
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.bg-primary-darker {
  background-color: var(--bs-primary-text-emphasis);
}

#masthead::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('/images/header.jpg');
  opacity: 0.4;
  z-index: 0;
}

.navbar[data-bs-theme="dark"] {
  --bs-navbar-brand-font-size: 2rem;
  --bs-navbar-color: rgba(255, 255, 255, 0.8);
  --bs-navbar-hover-color: rgba(255, 255, 255, 1);
  --bs-navbar-disabled-color: rgba(255, 255, 255, 1);
  --bs-navbar-active-color: #fff;

  --bs-link-color: var(--bs-navbar-color);
  --bs-link-hover-color: var(--bs-navbar-hover-color);
  --bs-navbar-toggler-border-color: var(--bs-navbar-color);
}

.navbar-brand {
  font-family: var(--bs-font-serif);
  font-weight: 500;
}

.nav-category {
  font-family: var(--bs-font-sans-serif);
  color: white;
  font-weight: 600;
}

#sidebarContent {
  opacity: 1;
  transition: opacity 0.3s ease, width 0.3s ease;
}

#sidebarContent.collapsing {
  opacity: 0;
  width: 0;
  overflow: hidden;
}

#sidebarContent.collapse:not(.show) {
  opacity: 0;
  width: 0;
  overflow: hidden;
}


footer ul.about-links {
  column-count: 1;

  @media (min-width: 992px) {
    column-count: 2;
    column-gap: 1.5rem;
  }
}

/* ------------- */
/* Headings      */
/* ------------- */

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  margin-bottom: 0.75rem;
  font-weight: 600;
}

h1, .h1 {
  color: var(--bs-primary);
  margin-bottom: 1.25rem;
  a {
    color: inherit;
  }
  a:hover {
    color: var(--bs-link-hover-color);
    text-decoration-style: solid;
  }
}

h2 {
  color: var(--bs-success);
}

h3 {
  color: var(--bs-secondary);
}

/* Improve spacing below elements that precede headings */
*:has(+ h1),*:has(+ h2),*:has(+ h3),*:has(+ h4),*:has(+ h5),*:has(+ h6) {
  margin-bottom: 2rem;
}

/* ----------------- */
/* Misc Typography   */
/* ----------------- */
pre code {
  color: var(--bs-code-color);
}

/* ----------------- */
/* Forms             */
/* ----------------- */
.form-select:disabled,
.form-control:disabled {
  opacity: 0.5;
}

/* Fixup TomSelect */
.ts-wrapper.single .ts-control {
  flex-wrap: nowrap;
}
.ts-wrapper.single .ts-control .item {
  flex-shrink: 0;
}

/* ----------------- */
/* Search Results    */
/* ----------------- */

#toggleIcon {
  transition: transform 0.3s ease;
}

#facet-wrapper .form-label {
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.facet-widget.bg-light {
  /* ensure color contrast a11y is sufficient for */
  /* disabled checkbox labels on bg-light background */
  .form-check-input:disabled~.form-check-label, .form-check-input[disabled]~.form-check-label {
    opacity: 0.6;
  }
}

a.facet-constraint:hover,
a.facet-constraint:focus {
  .bi {
    color: var(--bs-primary);
  }
}

a.facet-constraint .constraint-label {
  .string-option {
    font-weight: normal;
  }
  /* mdash character separator */
  .string-option:before {
    content: " \2014  ";
  }
}

table#search-results-table {
  th {
    background-color: var(--bs-light);
    border-bottom-width: 2px;
    position: sticky;
    top: 0;
  }


}

/* Border between result record rows but not their associated text */
tr.result-record {
  border-top: var(--bs-border-width) solid var(--bs-border-color);
}


/* Slightly hacky way to get pagination links to truncate with */
/* ellipses when there are many pages of results. TODO: consider */
/* whether to write this kind of logic in FacetBrowser.java */
ul#results-pagination {
  li:not(.active) {
    display: none;
  }

  /* Show first three pages */
  li:not(.active):nth-child(-n+3) {
    display: list-item !important;
  }

  /* Show final two pages */
  li:not(.active):nth-last-child(-n+2) {
    display: list-item !important;
  }

  /* Show the next five pages after the .active page */
  li.active + li:not(.active),
  li.active + li:not(.active) + li:not(.active),
  li.active + li:not(.active) + li:not(.active) + li:not(.active),
  li.active + li:not(.active) + li:not(.active) + li:not(.active) + li:not(.active),
  li.active + li:not(.active) + li:not(.active) + li:not(.active) + li:not(.active) + li:not(.active) {
    display: list-item !important;
  }

  /* Show the three pages before the .active page */
  li:not(.active):has(+ li.active),
  li:not(.active):has(+ li:not(.active) + li.active),
  li:not(.active):has(+ li:not(.active) + li:not(.active) + li.active) {
    display: list-item !important;
  }
}


/* ------------------------------ */
/* Transcriptions & Translations  */
/* TODO: port more related styles */
/* from master.css                */
/* ------------------------------ */

.transcription span[data-bs-original-title]:hover {
  background-color: var(--bs-warning-bg-subtle);
}

.textpartnumber {
  display: block;
  margin-left: -3em;
  font-weight: 600;
}

.linenumber, .linenumberbroken {
  float: left;
  margin-left: -2em;
}

.linenumberbroken {
  color: var(--bs-danger);
}

#edition {
  margin-left: 3em;
}

#apparatus {
  margin-left: -3em;
}

span.term {
  border: 1px solid var(--bs-success);
  padding: 0.1rem 0.2rem;
}

/* ------------- */
/* Links         */
/* ------------- */

a {
  text-underline-offset: 0.125em;
}

.no-link-underline a:not(:hover) {
  text-decoration: none;
}

/* ------------- */
/* Lists         */
/* ------------- */
.list-group {
  --bs-list-group-action-color: var(--bs-body-color);
  --bs-list-group-active-bg: var(--bs-primary);
  --bs-list-group-active-border-color: var(--bs-list-group-active-bg);
}

.columns-2 {
  column-count: 2;
  column-gap: 1.5rem;
}

.columns-3 {
  column-count: 3;
  column-gap: 1.5rem;
}

.columns-4 {
  column-count: 4;
  column-gap: 1.5rem;
}

.list-outdent {
  li {
    text-indent: -1.2rem;
    padding-left: 1.2rem;
  }
}
/* ... */

